cambio sfondo corretto

--- a/style.css
+++ b/style.css
@@ -15,11 +15,9 @@
 }
 body {
     padding: 20px;
-    background: url(https://e1.pxfuel.com/desktop-wallpaper/346/410/desktop-wallpaper-among-us-space-night-art-among-us-among-us-abstract.jpg);
+    background: url(https://images.everyeye.it/img-notizie/among-us-come-giocare-amici-pc-android-iphone-v11-477889.jpg);
     color: #f8f9fa;
     background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 /* Regola CSS per i colori dei personaggi di Among Us */
 /* Regola CSS per i colori dei personaggi di Among Us senza sfumature tra di loro */
